fix spacing

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -155,6 +155,7 @@ border-radius: 2px;
 }
 .points-icon {
 font-size: 8px;
+line-height: 8px;
 padding-top: 1px;
 font-family: sans-serif;
 text-align: center;
@@ -232,4 +233,5 @@ opacity: 0;
   100% {
 opacity: 1;
 }
+
 }
